adding front and changing air-conditioners
